deployment/k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: eks-auto-alb
spec:
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: eks-auto-alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: doctor-booking
  name: doctor-booking-public
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: aws_acm_cert_arn_here
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: eks-auto-alb
  rules:
    - host: doctor-booking.example.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: doctor-booking-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doctor-booking-frontend
                port:
                  number: 80
